@@ -2,6 +2,9 @@ DigIt CHANGE LOG
 ======================
 
 2024/11/
+        07 Writed WIA Source Load/Save from XML;
+	   Writed WIA Source OnSet maybe deeply tested;
+	   Added defualt value when Load from XML in Twain Source
         06 Changed Interfaces method Enabled and added setEnabled;
 	   Added Test of Interfaces Init in Register;
 	   Added Test of Interfaces Enabled in Menu Build;
